namespace assignment;

public class BubbleSort
{
    /// <summary>
    /// Sorts dates with BubbleSort.
    /// </summary>
    /// <param name="dates">the List of Dates to be sorted</param>
    public void PerformSort(List<DateTime> dates)
    {
        //TODO: implement
    }
}