namespace assignment;

public class MergeSort
{
    /// <summary>
    /// Sorts dates with MergeSort.
    /// </summary>
    /// <param name="dates">the List of Dates to be sorted</param>
    public void PerformSort(List<DateTime> input)
    {
        // TODO: implement
    }
}
