@startuml
!theme artemisdark2

skinparam ArrowFontSize 16
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam class {
    FontSize 20
    AttributeFontSize 16
}

class Client {
}

class Policy {
  <color:testsColor(testMethods[Policy])>+configure()</color>
}

class Context {
  <color:testsColor(testAttributes[Context])>-dates: List<Date></color>
  <color:testsColor(testMethods[Context])>+sort()</color>
}

interface SortStrategy {
  <color:gray)>+performSort(List<Date>)</color>
}

class BubbleSort {
  <color:gray>+performSort(List<Date>)</color>
}

class MergeSort {
  <color:gray>+performSort(List<Date>)</color>
}

MergeSort -up-|> SortStrategy
BubbleSort -up-|> SortStrategy
Policy -right-> Context
Context -right-> SortStrategy #red: sortAlgorithm
Client .down.> Policy
Client .down.> Context

hide empty fields
hide empty methods

@enduml